--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/myresume/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Made by K2"/><link rel="apple-touch-icon" href="/myresume/logo192.png"/><link rel="manifest" href="/myresume/manifest.json"/><link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/><title>My resume</title><script defer="defer" src="/myresume/static/js/main.a0368843.js"></script><link href="/myresume/static/css/main.d0d012b8.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/myresume/favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Made by K2" />
+    <!-- <link rel="apple-touch-icon" href="/myresume/logo192.png" /> -->
+    <link rel="manifest" href="/myresume/manifest.json" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <title>My resume</title>
+    <script defer="defer" src="/myresume/static/js/main.a0368843.js"></script>
+    <link href="/myresume/static/css/main.d0d012b8.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root" class="m-0 p-0"></div>
+  </body>
+</html>
